Define server metadata in response
 - server implementation has hostname for identity, IP addresses,
  and any labels provided on command line
